--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.res.trocadejogos">
 
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+
+    <uses-feature android:name="android.hardware.camera2"
+        android:required="true"></uses-feature>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
