--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Views.Perfil"
-            android:parentActivityName=".Views.Biblioteca"></activity>
+        <activity android:name=".Conversas"></activity>
+        <activity
+            android:name=".Views.Perfil"
+            android:parentActivityName=".Views.Biblioteca" />
         <activity android:name=".Views.Biblioteca" />
         <activity
             android:name=".Views.CadastroUsuario"
