--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Views.AdicionarJogo"></activity>
+        <activity android:name=".Views.Conversas"></activity>
+        <activity
+            android:name=".Views.RedefinirSenha"
+            android:parentActivityName=".Views.MainActivity"></activity>
+        <activity android:name=".Views.AdicionarJogo" />
         <activity
             android:name=".Views.Chat"
             android:label="@string/title_activity_chat"
-            android:parentActivityName=".Views.Biblioteca"
+            android:parentActivityName=".Views.Conversas"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
