--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.res.trocadejogos">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -22,7 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".Mapa2"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -37,9 +36,10 @@
 
         <activity
             android:name=".Views.Mapa"
-            android:label="@string/title_activity_mapa"></activity>
-        <activity android:name=".Views.EditarJogo"
-                  android:parentActivityName=".Views.Biblioteca"/>
+            android:label="@string/title_activity_mapa" />
+        <activity
+            android:name=".Views.EditarJogo"
+            android:parentActivityName=".Views.Biblioteca" />
         <activity android:name=".Views.Conversas" />
         <activity
             android:name=".Views.RedefinirSenha"
